--- a/html/index.html
+++ b/html/index.html
@@ -3,38 +3,72 @@
   body{
     background-color: white;
   }
-
   .nav{
     background-color: #232323;
-    width: 101.1%;
-    height: 80px;
+    width: 100%;
+    height: 130px;
     margin-left: -8px;
-    margin-top: -12px;
+    margin-top: -17px;
+    position: fixed;
   }
   .nav input[type=submit] {
-    width: 100px;
-    height: 80%;
-    background-color: #00a560;
+    width: 100%;
+    height: 5px;
+    background-color: transparent;
     border: 0px solid rgba(255, 255, 255, 0.6);
     border-radius: 0px;
     color: white;
     font-size: 15px;
     margin-top: 7.5px;
   }
+  .navObject{
+    width: 15%;
+    height: 90%;
+  }
+  /*
+    Body content
+  */
+  .bottomContent{
+    width: 100%;
+    height: auto;
+  }
+  .sideMenu{
+    width: 200px;
+    height: 400px;
+    background-color: #d6d6d6;
+
+  }
+  .content1, .content2, .content3, .content4{
+
+  }
 </style>
 </head>
 
 <body>
   <div class="nav">
-    <form action="account.html">
-      <input type="submit" value="Account" style="float: right;" />
-    </form>
     <form action="index.html">
-      <input type="image" src="../img/banner.png" value="test string" style="float: left; height: 80px; width: 270px; margin-left: 20px;" />
+      <input type="image" src="../img/bar.png" value="test string" style="float: left; height: 100px; width: 270px; margin-top: 20px;" />
     </form>
-    <form action="male.html">
-      <input type="submit" value="Mens Cloathing" style="float: left;" />
+    <div class="navObject">
+      <form action="account.html">
+        <input type="submit" value="| Cart |" style="float: left;" />
+      </form>
+      <form action="order.html">
+        <input type="submit" value="| Track Order |" style="float: left;" />
+      </form>
+    </div>
+
+    <form action="order.html">
+      <input type="submit" value="Mens Clothing" style="height: 100%; width: 10%;"/>
     </form>
+    <form action="order.html">
+      <input type="submit" value="Womans Clothing" style="height: 100%; width: 10%;"/>
+    </form>
+    <form action="order.html">
+      <input type="submit" value="Accessories" style="height: 100%; width: 10%;"/>
+    </form>
+
+
   </div>
 </body>
 
