--- a/html/male.html
+++ b/html/male.html
@@ -1,24 +1,66 @@
 <html>
 <style>
   body{
-    background-color: #9ceded;
+    background-color: white;
   }
 
   .nav{
-    background-color: #617c7c;
+    background-color: #232323;
     width: 101.1%;
-    height: 50px;
+    height: 80px;
     margin-left: -8px;
-    margin-top: -12px;
+    margin-top: -17px;
   }
   .nav input[type=submit] {
     width: 100px;
-    height: 100%;
-    background-color: #00a560;
+    height: 80%;
+    background-color: transparent;
     border: 0px solid rgba(255, 255, 255, 0.6);
     border-radius: 0px;
     color: white;
     font-size: 15px;
+    margin-top: 7.5px;
+  }
+  /* The dropdown container */
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
 </style>
 </head>
@@ -29,11 +71,20 @@
       <input type="submit" value="Account" style="float: right;" />
     </form>
     <form action="index.html">
-      <input type="image" src="../img/home.png" value="test string" style="float: left; height: 50px; width: 50px; margin-left: 20px;" />
+      <input type="image" src="../img/banner.png" value="test string" style="float: left; height: 80px; width: 270px; margin-left: 20px;" />
     </form>
-    <form action="male.html">
-      <input type="submit" value="Mens Cloathing" style="float: left;" />
-    </form>
+    <div class="dropdown">
+      <button class="dropbtn">
+<img src="../img/nav.png" width="60px" height="60px" style="float: left; margin-top: -19px;" />
+        Menu
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="male.html">Mens Clothing</a>
+        <a href="women.html">Womens Clothing</a>
+        <a href="accnt.html">Acconunt</a>
+      </div>
+    </div>
   </div>
 </body>
 
